# hourglass

./: .travis.yml  CMakeLists.txt  README.md
cmake/: version.cmake
demos/: CMakeLists.txt
demos/building-game/: main.cpp
demos/building-game/imgui/: imgui_impl_opengl3.cpp
demos/building_game/: CMakeLists.txt  gameEvent.hpp  render.cpp  render.hpp
demos/building_game/imgui/GL/: gl3w.c
demos/game-events/: CMakeLists.txt  README.md  main.cpp
demos/hello-world/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  config.hpp.in
lib/include/bittencookie/: hourglass.hpp  types.hpp
lib/include/hourglass/: hourglass.hpp
tests/: CMakeLists.txt  basic_tests.cpp  event_tests.cpp  lambda_tests.cpp  smart_pointers_tests.cpp
