cmake_minimum_required(VERSION 3.11)
project(hourglass_sdk)

set(CMAKE_CXX_STANDARD 17)

set(HOURGLASS_VERSION_MAJOR 0)
set(HOURGLASS_VERSION_MINOR 1)
set(HOURGLASS_VERSION_PATCH 0)
set(HOURGLASS_VERSION "${HOURGLASS_VERSION_MAJOR}.${HOURGLASS_VERSION_MINOR}.${HOURGLASS_VERSION_PATCH}")

option(BUILD_DEMOS "Build Demos" OFF)
option(BUILD_TESTS "Build tests for SDK" OFF)
option(ENABLE_COVERAGE "Enable code coverage" OFF)

message(STATUS "BUILD_DEMOS: " ${BUILD_DEMOS})
message(STATUS "BUILD_TESTS: " ${BUILD_TESTS})

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(third_party)

add_subdirectory(lib)

if(BUILD_DEMOS)
    add_subdirectory(demos)
endif()
